Fix strange header height on narrow screens

--- a/css/style.css
+++ b/css/style.css
@@ -1663,8 +1663,6 @@ body:not(.title-tagline-hidden) .site-branding-text {
 .has-header-image.home.blog .custom-header,
 .has-header-video.home.blog .custom-header {
 	display: table;
-	height: 300px;
-	height: 75vh;
 	width: 100%;
 }
 
